chore: consolidate real runtime integration